2005-03-23 Ian Rutt
 * Extended length of variables used to construct log messages to 150
   chars
 * Fixed problem with single-precision compilation
 * Converted awi.f to f90 (glint_global_interp.f90) - needs a bit more
   work, but functions correctly.
	
2005-03-17 Ian Rutt
 * Removed printing of ierr after calling awi.f
 * Released at version 0.5.1

2005-03-16 Ian Rutt
 * Added some dodgy f77 interpolation code (awi.f) to deal with problems I
 had with different global grids in NCEP data used to force
 glint_example. It is my aim to convert this to f90 soon.
 * Changed glint_example to deal with new precip data

2005-03-14 Ian Rutt
 * Adapted netcdf code to handle fractional year-lengths and added
  handling in GLINT for writing mass-balance information at these times
 * Fixed snow-depth to be accumulated on land only
 * Sorted out glint_example so the run goes all the way to the beginning
 of the next year.

2005-03-11 Magnus Hagdorn
 * configure.in: bumped version to 0.5.0
 * moved test_config.conf to tests
 * removed data dir
 * fix doc date to release date

2005-03-11 Ian Rutt
 * Moved glint_example files to glint-example module

2005-03-11 Magnus Hagdorn
 * configure.in, version.tex.in glimmer_version.f90.in, glimmer-config.in: add micro version
 * updated NEWS

2005-03-10 Ian Rutt
 * Began preliminary work on objectifying mass-balance accumulation in GLINT
 * Now plumbed in and working. Needs more work to enable asynchronous coupling
 * Removed cabability of saving global orog input and avoiding downscaling at the moment
   as it doesn't work.

2005-03-09 Ian Rutt
 * Added glimmer_daily_pdd.f90 - fully plumbed in.
 * Updated glint to have configureable number of days in year
 * Added ncep data for 6h temperatures and adjusted glint_example.f90
 * Added flags to GLINT to avoid unnecessary downscaling and accumulation
   of variables.

2005-03-08 Magnus Hagdorn
 * removed install-sh, it is autogenerated when bootstrap is run

2005-03-07 Ian Rutt